components/test/res/TestsParameterInput/TestParameterNotTaged.check
newSource1:7: error: No ClassTag available for T
      specialized[T] {
                     ^
[[syntax trees at end of                     typer]] // newSource1
package <empty> {
  import ch.epfl.lamp.specialized._;
  class C[T >: Nothing <: Any, U >: Nothing <: Any] extends scala.AnyRef {
    def <init>(): C[T,U] = {
      C.super.<init>();
      ()
    };
    def m(): <error> = ch.epfl.lamp.specialized.`package`.specialized[T](scala.Unit)()
  }
}